// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Builder > should build nested elements and relTo 1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "green",
      "description": null,
      "id": "s1",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {
        "opacity": 10,
      },
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s1.1": {
      "color": "primary",
      "description": null,
      "id": "s1.1",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "1",
    },
    "s2": {
      "color": "green",
      "description": null,
      "id": "s2",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {
        "opacity": 10,
      },
      "tags": null,
      "technology": null,
      "title": "s2",
    },
    "s2.1": {
      "color": "primary",
      "description": null,
      "id": "s2.1",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Component s2.1",
    },
    "s2.1.2": {
      "color": "primary",
      "description": null,
      "id": "s2.1.2",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Component s2.1.2",
    },
    "s2.1.2.3": {
      "color": "primary",
      "description": null,
      "id": "s2.1.2.3",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "3",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {
    "rel1": {
      "id": "rel1",
      "source": "s2.1.2.3",
      "target": "s1.1",
      "title": "relation from s2.1.2.3 to s1.1",
    },
    "rel2": {
      "id": "rel2",
      "source": "s2.1",
      "target": "s1.1",
      "title": "relation from s2.1 to s1.1",
    },
    "rel3": {
      "id": "rel3",
      "source": "s1.1",
      "target": "s2.1.2",
      "title": "relation from s1.1 to s2.1.2",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "component": {
        "style": {
          "shape": "browser",
        },
      },
      "system": {
        "style": {
          "color": "green",
          "opacity": 10,
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder > should build view  1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "1": {
      "color": "primary",
      "description": null,
      "id": "1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "1",
    },
    "2": {
      "color": "primary",
      "description": null,
      "id": "2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "2",
    },
    "3": {
      "color": "primary",
      "description": null,
      "id": "3",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "3",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "1": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "1",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
      ],
      "tags": null,
      "title": "View 1",
    },
    "2": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "2",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
        {
          "include": [
            {
              "element": "2",
              "isChildren": true,
            },
          ],
        },
      ],
      "tags": null,
      "title": "view 2",
    },
    "3": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "3",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "expanded": "3",
            },
          ],
        },
      ],
      "tags": null,
      "title": "",
    },
  },
}
`;

exports[`Builder > should build viewOf  1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "1": {
      "color": "primary",
      "description": null,
      "id": "1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "1",
    },
    "2": {
      "color": "primary",
      "description": null,
      "id": "2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "2",
    },
    "2.3": {
      "color": "primary",
      "description": null,
      "id": "2.3",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "3",
    },
    "2.3.4": {
      "color": "primary",
      "description": null,
      "id": "2.3.4",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "4",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "component": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "1": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "1",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "wildcard": true,
            },
          ],
        },
        {
          "include": [
            {
              "inout": {
                "element": "2.3",
                "isChildren": true,
              },
            },
          ],
        },
        {
          "exclude": [
            {
              "source": {
                "expanded": "1",
              },
              "target": {
                "element": "2.3",
                "isChildren": true,
              },
            },
          ],
        },
      ],
      "tags": null,
      "title": "View 1",
      "viewOf": "2",
    },
  },
}
`;
